# spender

./: README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3613c32f2b60_add_budget_table.py  5aa3733f7abe_add_accout_table.py  98b97e510698_add_goal_table.py  b006aa726084_add_table_user.py  c871edcae5e1_update_category_id_column.py  dd60908e2cfb_add_transaction_table.py  ee74e30fc457_add_categories_table.py
app/: main.py
app/api/: api.py  deps.py
app/api/endpoints/: account.py  auth.py  budget.py  category.py  goal.py  transaction.py  users.py
app/core/: config.py
app/crud/: __init__.py  auth.py  base.py  crud_account.py  crud_budget.py  crud_category.py  crud_goal.py  crud_transaction.py  crud_user.py
app/db/: database.py
app/models/: __init__.py  account.py  budget.py  category.py  goal.py  token.py  transaction.py  user.py
app/schemas/: account.py  budget.py  category.py  goal.py  token.py  transaction.py  user.py
app/tests/: conftest.py
app/tests/api/: test_category.py  test_goal.py  test_login.py  test_transaction.py  test_user.py
app/tests/utils/: account.py  category.py  goal.py  transaction.py  user.py
app/utils/: utils.py
